# Python-Data-Pipeline

./: README.md
drugs-publiction-graph/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
drugs-publiction-graph/.viz/: stats.json
drugs-publiction-graph/airflow/: Dockerfile  docker-compose.yaml  requirements.txt
drugs-publiction-graph/airflow/dags/: kedro_drugs_pipeline_dag.py
drugs-publiction-graph/airflow/postgres-data/global/: pg_control
drugs-publiction-graph/airflow/postgres-data/pg_stat/: global.stat
drugs-publiction-graph/data/02_intermediate/: preprocessed_clinical_trials.csv
drugs-publiction-graph/data/03_output/: drugs_journal_liaison_graphe.json
drugs-publiction-graph/src/drugs_publiction_graph/pipelines/nodes/: extract_node.py
drugs-publiction-graph/tests/: test_run.py
