[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "drugs_publiction_graph"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
drugs-publiction-graph = "drugs_publiction_graph.__main__:main"

[tool.kedro]
package_name = "drugs_publiction_graph"
project_name = "drugs_publiction_graph"
kedro_init_version = "0.19.8"
tools = [ "Testing",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/drugs_publiction_graph -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "drugs_publiction_graph.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "3166ba6aec464844a12e396b2d3947a9"
